--- a/main.css
+++ b/main.css
@@ -1,7 +1,13 @@
+*::backdrop {
+    width: auto;
+    height: 100px;
+    border-bottom: blueviolet;
+}
+
 div {
     width: 100px;
     height: 100px;
-    border: 1px solid red;
+    border: 10px dashed orange;
 }
 
 img {
