--- a/border-radius/main2.css
+++ b/border-radius/main2.css
@@ -7,7 +7,7 @@
             div {
                 width: 100%;
                 height: 300px;
-                border: 2px solid red;
+                border: 2px dashed red;
                 margin: 20px auto;
             }
             
@@ -37,8 +37,13 @@
             }
             
             .bellatwo {
-                height: 200px;
-                border-radius: 200px;
+                height: auto;
+                border-radius: auto;
                 width: 400px;
                 background-image: url(../media/my\ pic.jpeg/auto);
+            }
+            
+            h1 {
+                height: 400px;
+                box-sizing: border-box;
             }
