--- a/main.css
+++ b/main.css
@@ -1,45 +1,14 @@
-*::backdrop {
-    width: auto;
-    height: 100px;
-    border-bottom: blueviolet;
-}
-
-div {
-    width: 100px;
-    height: 100px;
-    border: 10px dashed orange;
-}
-
-img {
-    border: 10px groove orangered;
-}
-
-.mylogo1 {
-    border: 10px dashed rgb(0, 217, 255);
-}
-
-.mylogo2 {
-    border-left-color: sienna;
-}
-
-* {
-    margin: 100px;
-}
-
-header {
-    width: 100%;
-    height: 100px;
-    background-color: red;
-}
-
-section {
-    width: auto;
-    height: 200px;
+html {
     background-color: blue;
 }
 
-article {
-    width: 50%;
-    height: 100px;
+body {
+    width: 60%;
+    margin: 0 auto;
     background-color: chartreuse;
+    border: 5px solid black;
+}
+
+img {
+    border-radius: 100%;
 }
